Adding Dockerfile and Docker compose for creating docker container for postgress database and the backend node.js

--- a/Backend/.env
+++ b/Backend/.env
@@ -17,5 +17,5 @@ SALT_ROUND=10
 # images server route
 IMAGEROUTE=http://localhost:8080/image/userImages/
 BABYIMAGE=http://localhost:8080/image/babyImages/
-# token sercer
+# token sercet
 TOKENSECRET=Baby-Milk1212
