updating bug report

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,5 +1,5 @@
 # Development Database
-POSTGRES_HOST=127.0.0.1
+POSTGRES_HOST=postgres
 POSTGRES_DB=MENAH
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=mohamed123
