--- a/Backend/.env
+++ b/Backend/.env
@@ -17,5 +17,6 @@ SALT_ROUND=10
 # images server route
 IMAGEROUTE=http://localhost:8080/image/userImages/
 BABYIMAGE=http://localhost:8080/image/babyImages/
+MOTHERIMAGE=http://localhost:8080/image/motherImages/
 # token sercet
 TOKENSECRET=Baby-Milk1212
